# qaz

./: .env.example  .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_e0_foundation.py  0002_e1_auth.py  0003_e1_control.py  0004_e1_transport_security.py  0005_e1_rls_control.py  0006_e1_runtime_role.py  0007_e2_conversations.py  0008_e2_chat_schema_access.py  0009_e2_response_runs.py  0010_e2_model_prompt_registry.py  0011_e2_model_calls.py  0012_e3_memory_core.py  0013_e3_memory_revisions.py
backend/src/novo/: __init__.py  main.py
backend/src/novo/agents/: __init__.py
backend/src/novo/api/: dependencies.py  health.py
backend/src/novo/audit/: __init__.py  models.py
backend/src/novo/conversations/: __init__.py  guardrails.py  models.py  responses.py  service.py
backend/src/novo/core/: config.py  logging.py  middleware.py  request_context.py
backend/src/novo/files/: __init__.py
backend/src/novo/governance/: __init__.py  models.py  service.py
backend/src/novo/identity/: __init__.py  models.py  security.py  service.py
backend/src/novo/infrastructure/: base.py  cache.py  database.py  health.py  rate_limit.py  rls.py
backend/tests/: conftest.py  test_accounting.py  test_conversations.py  test_gateway.py  test_health.py  test_memory.py  test_memory_candidates.py  test_memory_revisions.py  test_registry.py  test_runtime_role.py  test_security_controls.py  test_working_context.py
(+138 files in other folders)
